Agregue control por acceso de roles y comando para crear y obtener token de Admin al correr la aplicacion